packages/frosted-ui/src/components/avatar.css
.fui-AvatarRoot {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
  user-select: none;
  width: var(--avatar-size);
  height: var(--avatar-size);
  flex-shrink: 0;
  outline-offset: -1px;

  outline: 1px solid var(--accent-a5);
  background-color: var(--accent-a3);
  border-radius: max(25%, var(--radius-full));

  & :where(.fui-AvatarFallback) {
    color: var(--accent-a11);
  }
  &:where(.fui-high-contrast) :where(.fui-AvatarFallback) {
    color: var(--accent-12);
  }
  &:where(.fui-variant-round) {
    --radius-full: var(--radius-thumb);
  }
}
.fui-AvatarRoot[data-status='loaded'] {
  outline: 1px solid var(--gray-a5);
  background: none;
}

.fui-AvatarImage {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: inherit;
  /* Fix safari issue where animated avatars were blurred */
  transform: translateZ(0px);
}

.fui-AvatarFallback {
  z-index: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  line-height: 1;
  border-radius: inherit;
}

/***************************************************************************************************
 *                                                                                                 *
 * SIZES                                                                                           *
 *                                                                                                 *
 ***************************************************************************************************/

.fui-AvatarFallback {
  font-weight: var(--font-weight-medium);
  text-transform: uppercase;

  &:where(.fui-one-letter) {
    font-size: var(--avatar-fallback-one-letter-font-size);
  }
  &:where(.fui-two-letters) {
    /* prettier-ignore */
    font-size: var(--avatar-fallback-two-letters-font-size, var(--avatar-fallback-one-letter-font-size));
  }
}

@breakpoints {
  .fui-AvatarRoot {
    &:where(.fui-r-size-1) {
      --avatar-size: var(--space-5);
      --avatar-fallback-one-letter-font-size: var(--font-size-2);
      --avatar-fallback-two-letters-font-size: var(--font-size-1);
      letter-spacing: var(--letter-spacing-1);
    }
    &:where(.fui-r-size-2) {
      --avatar-size: var(--space-6);
      --avatar-fallback-one-letter-font-size: var(--font-size-3);
      --avatar-fallback-two-letters-font-size: var(--font-size-2);
      letter-spacing: var(--letter-spacing-2);
    }
    &:where(.fui-r-size-3) {
      --avatar-size: var(--space-7);
      --avatar-fallback-one-letter-font-size: var(--font-size-4);
      --avatar-fallback-two-letters-font-size: var(--font-size-3);
      letter-spacing: var(--letter-spacing-3);
    }
    &:where(.fui-r-size-4) {
      --avatar-size: var(--space-8);
      --avatar-fallback-one-letter-font-size: var(--font-size-5);
      --avatar-fallback-two-letters-font-size: var(--font-size-4);
      letter-spacing: var(--letter-spacing-4);
    }
    &:where(.fui-r-size-5) {
      --avatar-size: var(--space-9);
      --avatar-fallback-one-letter-font-size: var(--font-size-6);
      letter-spacing: var(--letter-spacing-6);
    }
    &:where(.fui-r-size-6) {
      --avatar-size: 80px;
      --avatar-fallback-one-letter-font-size: var(--font-size-7);
      letter-spacing: var(--letter-spacing-7);
    }
    &:where(.fui-r-size-7) {
      --avatar-size: 96px;
      --avatar-fallback-one-letter-font-size: var(--font-size-7);
      letter-spacing: var(--letter-spacing-7);
    }
    &:where(.fui-r-size-8) {
      --avatar-size: 128px;
      --avatar-fallback-one-letter-font-size: var(--font-size-8);
      letter-spacing: var(--letter-spacing-8);
    }
    &:where(.fui-r-size-9) {
      --avatar-size: 160px;
      --avatar-fallback-one-letter-font-size: var(--font-size-9);
      letter-spacing: var(--letter-spacing-9);
    }
  }
}

